--- a/style.css
+++ b/style.css
@@ -49,4 +49,124 @@ body{
 .hero-section
 {
     background-color: #1f2937;
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+
+.hero-text{
+    flex: 1;
+}
+
+.hero-wrapper{
+    max-width: 1290px;
+    padding-right: 20px;
+    padding-left: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    gap: 50px;
+}
+
+h1{
+    font-size: 48px;
+    font-weight: 900;
+    color: #f9faf8;
+    margin: 0;
+}
+
+.subh1
+{
+    font-size: 18px;
+    color: #e5e7eb;
+    
+}
+.main-cta
+{
+    font-size: 18px;
+    color: #e5e7eb;
+    font-weight: 600;
+    background-color: #3882f6;
+    border-radius: 10px;
+    padding: 8px 24px;
+}
+
+.placeholder{
+    background-color: gray;
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #f9faf8;
+}
+
+.second-section
+{
+    padding-bottom: 100px;
+}
+
+.second-heading
+{
+    text-align:  center;
+    font-size: 36px;
+    color: #1f2937;
+    font-weight: 900;
+    padding-top: 50px;
+}
+
+.border
+{
+    border: 5px solid #3882f6;
+    width: 150px;
+    height: 150px;
+    border-radius: 10px;
+}
+.card-text
+{
+    text-align: center;
+}
+.card{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 150px;
+    justify-content: center;
+}
+.card-wrapper{
+    padding-top: 50px;
+    display: flex;
+    justify-content: space-around;
+    max-width: 1290px;
+    padding-right: 20px;
+    padding-left: 20px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.third-section
+{
+    background-color: #e5e7eb;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    
+}
+.quote
+{
+    font-size: 36px;
+    font-style: italic;
+    font-weight: 300;
+    color: #1f2937;
+    max-width: 920px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 0;
+}
+.signature
+{
+    font-size: 20px;
+    font-weight: bold;
+    max-width: 920px;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    flex-direction: row-reverse;
 }
