--- a/style.css
+++ b/style.css
@@ -170,3 +170,50 @@ h1{
     display: flex;
     flex-direction: row-reverse;
 }
+.fourth-section
+{
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+.blue-div
+{
+    display: flex;
+    max-width: 1090px;
+    /* padding-top: 50px; */
+    padding: 50px 100px;
+    /* padding-right: 100px;
+    padding-left: 100px; */
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #3882f6;
+    border-radius: 10px;
+    color: white;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.bdiv-cta{
+    border: 2px solid white;
+    background-color: transparent;
+    margin: 0;
+    font-size: 18px;
+    color: #e5e7eb;
+    font-weight: 600;
+    border-radius: 10px;
+    padding: 8px 24px;
+}
+.blue-div-text
+{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+.bdiv-header
+{
+    margin: 0;
+    font-weight: bold;
+}
+.bdiv-subtext
+{
+    margin: 0;
+}
